<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DetailsFragment">

    <TextView
        android:id="@+id/textview_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:text="@string/main_light"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_light_data"
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="50dp"
        android:text="@string/main_light_data"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_proximity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/main_proximity"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_light" />

    <TextView
        android:id="@+id/textview_proximity_data"
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="24dp"
        android:text="@string/main_proximity_data"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_light_data" />

    <TextView
        android:id="@+id/textview_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/main_pressure"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_proximity" />

    <TextView
        android:id="@+id/textview_pressure_data"
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="24dp"
        android:text="@string/main_pressure_data"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_proximity_data" />

    <TextView
        android:id="@+id/textview_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/main_position"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_pressure" />

    <TextView
        android:id="@+id/textview_position_lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="4dp"
        android:text="@string/main_position_lat"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_position" />

    <TextView
        android:id="@+id/textview_position_long"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:layout_marginTop="4dp"
        android:text="@string/main_position_long"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_position" />

    <TextView
        android:id="@+id/textview_compass_data"
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="32dp"
        android:text="@string/main_compass_data"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_position_lat_data" />

    <TextView
        android:id="@+id/textview_position_long_data"
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="250dp"
        android:layout_marginTop="8dp"
        android:text="@string/main_position_long_data"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_position_long" />

    <TextView
        android:id="@+id/textview_position_lat_data"
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="7dp"
        android:text="@string/main_position_lat_data"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_position_lat" />

    <TextView
        android:id="@+id/textview_compass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/main_compass"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_position_lat_data" />

    <EditText
        android:id="@+id/editTextTextMultiLine_log"
        android:layout_width="335dp"
        android:layout_height="310dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="50dp"
        android:autofillHints=""
        android:background="#E8E7EA"
        android:enabled="false"
        android:focusable="auto"
        android:focusableInTouchMode="true"
        android:freezesText="true"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:isScrollContainer="true"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/cardview_dark_background"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_log"
        tools:ignore="PrivateResource" />

    <TextView
        android:id="@+id/textView_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:text="@string/main_log"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_compass" />


</androidx.constraintlayout.widget.ConstraintLayout>

